test/syntax/wrong/unused1.kk.out
test/syntax/wrong/unused1.kk(2, 3): error: expression has no effect and is unused
 hint: did you forget an operator? or is there a space between an application?