test/syntax/wrong/unused1.kk
function main() {
  1 2 + 3
}